samples/_failures_safe/1761072086_be804b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1576b580.c: In function ‘main’:
./samples/SAFE/__tmp_1576b580.c:155:45: error: expected ‘)’ at end of input
  155 |                 if (multiply_matrices(&a, &b
      |                                      ~      ^
      |                                             )
./samples/SAFE/__tmp_1576b580.c:155:21: error: too few arguments to function ‘multiply_matrices’
  155 |                 if (multiply_matrices(&a, &b
      |                     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1576b580.c:65:5: note: declared here
   65 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1576b580.c:155:17: error: expected declaration or statement at end of input
  155 |                 if (multiply_matrices(&a, &b
      |                 ^~
./samples/SAFE/__tmp_1576b580.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1576b580.c:155:17: error: expected declaration or statement at end of input
